--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -73,6 +73,8 @@
     <color name="color_e4e4e2">#e4e4e2</color>
     <color name="cutline">#e4e4e2</color>
     <color name="color_f1a942">#f1a942</color>
+    <color name="btn_normal">#f1a942</color>
+    <color name="btn_pressed">#99f1a942</color>
     <color name="color_f0f1f5">#f0f1f5</color>
     <color name="white_pressed">#99ffffff</color>
 
