--- a/app/src/main/res/layout/item_messages.xml
+++ b/app/src/main/res/layout/item_messages.xml
@@ -24,6 +24,7 @@
             android:layout_marginTop="15dp"
             android:src="@drawable/my_header"/>
         <TextView
+            android:id="@+id/tv_message_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
