--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -509,6 +509,14 @@
         <item name="android:layout_height">15dp</item>
         <item name="android:src">@drawable/right_row</item>
     </style>
+    <style name="btn_normal">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:background">@drawable/selector_btn_yellow</item>
+    </style>
 
 
 </resources>
