--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -273,6 +273,7 @@
                     android:layout_marginBottom="10dp"
                     android:text="放款到银行卡"/>
                 <TextView
+                    android:id="@+id/tv_changeCard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
