--- a/app/src/main/res/layout/activity_repay_detail.xml
+++ b/app/src/main/res/layout/activity_repay_detail.xml
@@ -98,9 +98,14 @@
         android:text="还款计划"/>
 
 
-    <ListView
-        android:id="@+id/lv_repay_detail"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"></ListView>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swiper_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/lv_repay_detail"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"></ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
