--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -3,6 +3,55 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/common_backgroud"
     android:orientation="vertical">
+    <include layout="@layout/layout_title2"/>
+    <ImageView
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/about_logo"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="80dp"/>
+    <LinearLayout
+        android:id="@+id/lay_check_update"
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:layout_marginTop="33dp"
+        android:gravity="center_vertical"
+        android:background="@drawable/click_bg">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/version_update"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/color_important"
+            android:textSize="16sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:textColor="@color/color_important"
+            android:textSize="14sp"
+            android:text="@string/current_version"/>
+
+        <TextView
+            android:id="@+id/tv_version_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_important"
+            android:textSize="14sp"
+            android:text="1.0.0"/>
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/right_row"
+            android:layout_marginLeft="10dp"/>
+    </LinearLayout>
 
 </LinearLayout>
