--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -77,6 +77,7 @@
     <color name="btn_pressed">#f0a130</color>
     <color name="color_f0f1f5">#f0f1f5</color>
     <color name="white_pressed">#99ffffff</color>
+    <color name="color_fbfbfb">#fbfbfb</color>
 
 
 </resources>
