--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -339,6 +339,15 @@
         <item name="android:textColor">@color/color_111111</item>
     </style>
 
+    <style name="TextAppear.Theme.font_normal_Size16" parent="android:TextAppearance.Theme">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/font_normal</item>
+    </style>
+    <style name="TextAppear.Theme.white_Size16" parent="android:TextAppearance.Theme">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="TextAppear.Theme.111111_Size18" parent="android:TextAppearance.Theme">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/color_111111</item>
