--- a/app/src/main/res/layout/activity_cardlist.xml
+++ b/app/src/main/res/layout/activity_cardlist.xml
@@ -7,26 +7,32 @@
 
     <include layout="@layout/layout_title_normal"/>
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swiper_refresh"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ListView
-            android:id="@+id/lv_cardlist"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swiper_refresh"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="0dp"
-            android:scrollbars="none" >
-        </ListView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_height="match_parent"
+            android:layout_above="@+id/tv_addcard">
+            <ListView
+                android:id="@+id/lv_cardlist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="0dp"
+                android:scrollbars="none" >
+            </ListView>
+        </android.support.v4.widget.SwipeRefreshLayout>
 
-    <TextView
-        android:id="@+id/tv_addcard"
-        android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:textSize="16sp"
-        android:textColor="@color/color_111111"
-        android:gravity="center"
-        android:text="+ 添加借记卡"/>
+        <TextView
+            android:id="@+id/tv_addcard"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:textSize="16sp"
+            android:textColor="@color/color_111111"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:text="+ 添加借记卡"/>
+    </RelativeLayout>
 
 </LinearLayout>
