--- a/app/src/main/res/layout/fragment_allpay.xml
+++ b/app/src/main/res/layout/fragment_allpay.xml
@@ -5,6 +5,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="20dp"
+        android:background="@color/color_line"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swiper_refresh"
