--- a/app/src/main/res/layout/item_allpay.xml
+++ b/app/src/main/res/layout/item_allpay.xml
@@ -31,6 +31,7 @@
                 android:layout_marginRight="15dp"
                 android:orientation="horizontal">
                 <ImageView
+                    android:id="@+id/iv_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/iv_repaying"/>
