--- a/app/src/main/res/layout/activity_loan_details.xml
+++ b/app/src/main/res/layout/activity_loan_details.xml
@@ -3,22 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/common_backgroud"
     android:orientation="vertical">
-
+    <include layout="@layout/layout_title2"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical">
         <!--借款金额、借款期限-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="15dp"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/font_normal"
                 android:text="借款金额"/>
 
             <TextView
@@ -26,50 +30,89 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="借款期限"/>
+                android:text="借款期限（天）"/>
         </LinearLayout>
+
         <!--金额，天数-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="15dp"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_loan_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="12333"/>
+                android:textColor="@color/color_important"
+                android:textSize="23dp"
+                android:text="12333.45"/>
 
             <TextView
+                android:id="@+id/tv_loan_days"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
+                android:textColor="@color/color_important"
+                android:textSize="23dp"
                 android:text="90天"/>
         </LinearLayout>
     </LinearLayout>
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/A1"/>
+        style="@style/view_line_left15"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:padding="15dp"
+        android:background="@color/white"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="16dp"
+            android:textColor="@color/font_normal"
             android:text="到账卡："/>
         <!--银行卡号-->
         <TextView
+            android:id="@+id/tv_load_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="16dp"
+            android:textColor="@color/color_important"
+            android:gravity="right"
             android:text="中国民生银行（2566）"/>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:text="@string/loan_stage"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swiper_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_loan_stages"
+                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </LinearLayout>
+
 
 </LinearLayout>
