--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -78,6 +78,7 @@
     <color name="color_f0f1f5">#f0f1f5</color>
     <color name="white_pressed">#99ffffff</color>
     <color name="color_fbfbfb">#fbfbfb</color>
+    <color name="gray_cirle">#d9d9d9</color>
 
 
 </resources>
