--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -526,6 +526,18 @@
         <item name="android:textSize">14sp</item>
         <item name="android:background">@drawable/selector_btn_yellow</item>
     </style>
+    <style name="view_line_left15">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:background">@color/cutline</item>
+    </style>
+
+    <style name="view_vertical_line">
+        <item name="android:layout_width">1dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">#ff0000</item>
+    </style>
 
 
 </resources>
