借款详情-recyclerview加载

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -536,7 +536,7 @@
     <style name="view_vertical_line">
         <item name="android:layout_width">1dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#ff0000</item>
+        <item name="android:background">@color/cutline</item>
     </style>
 
 
