--- a/app/src/main/res/drawable/loan_stage_gray_circle.xml
+++ b/app/src/main/res/drawable/loan_stage_gray_circle.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <size android:width="8dp" android:height="8dp"/>
-    <!--<solid android:color="@color/gray_cirle"/>-->
-    <solid android:color="#ff0000"/>
+    <solid android:color="@color/gray_cirle"/>
     <corners android:radius="4dp"/>
 </shape>
