--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
     <include layout="@layout/layout_title2"/>
     <TextView
@@ -11,6 +12,7 @@
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingTop="10dp"
+        android:background="@color/A5"
         android:padding="10dp"
         android:text="@string/feedback_prompt"
         android:textColor="@color/color_important"
