--- a/app/src/main/res/layout/activity_loan_details.xml
+++ b/app/src/main/res/layout/activity_loan_details.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/common_backgroud"
     android:orientation="vertical">
     <include layout="@layout/layout_title2"/>
@@ -99,19 +100,27 @@
         android:text="@string/loan_stage"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swiper_refresh"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_loan_stages"
-                android:background="@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        android:layout_height="match_parent">
+        <!--<android.support.v4.widget.SwipeRefreshLayout-->
+            <!--android:id="@+id/swiper_refresh"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent">-->
+            <!--<android.support.v7.widget.RecyclerView-->
+                <!--android:id="@+id/rv_loan_stages"-->
+                <!--android:background="@color/white"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent">-->
 
-            </android.support.v7.widget.RecyclerView>
-        </android.support.v4.widget.SwipeRefreshLayout>
+            <!--</android.support.v7.widget.RecyclerView>-->
+        <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+        <com.github.jdsjlzx.recyclerview.LRecyclerView
+            android:id="@+id/rv_loan_stages"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+        </com.github.jdsjlzx.recyclerview.LRecyclerView>
     </LinearLayout>
 
 
