--- a/app/src/main/res/layout/entirefactorpay.xml
+++ b/app/src/main/res/layout/entirefactorpay.xml
@@ -19,14 +19,14 @@
             android:hint="用户ID"
             android:paddingLeft="5dp"
             android:paddingRight="5dp" 
-            android:text="28"/>
+            android:text="27"/>
 
         <EditText
             android:id="@+id/idcard"
             android:layout_width="fill_parent"
             android:layout_height="40dp"
             android:hint="身份证"
-            android:text="339005198901194918"
+            android:text="410881199006207774"
             android:paddingLeft="5dp"
             android:paddingRight="5dp" />
 
@@ -35,7 +35,7 @@
             android:layout_width="fill_parent"
             android:layout_height="40dp"
             android:hint="姓名"
-            android:text="项晓锋"
+            android:text="薛超超"
             android:paddingLeft="5dp"
             android:paddingRight="5dp" />
 
@@ -56,7 +56,7 @@
             android:inputType="number"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="6212261202029696888" />
+            android:text="6217001540015096967" />
         
         <EditText
             android:id="@+id/cellno"
@@ -66,7 +66,7 @@
             android:inputType="number"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="18857185435" />
+            android:text="17706515960" />
 
         <EditText
             android:id="@+id/agree_no"
