--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -37,15 +37,18 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/iv_auth_flag"
                 android:layout_width="12dp"
                 android:layout_height="12dp"
-                android:src="@drawable/identification"/>
+                android:src="@drawable/identification"
+                android:visibility="gone"/>
 
             <TextView
+                android:id="@+id/tv_auth_state_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="已认证"
+                android:text="未认证"
                 android:textColor="#ffffff"
                 android:textSize="12sp"/>
         </LinearLayout>
