--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -5,36 +5,40 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
+
     <include layout="@layout/layout_title2"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/A5"
+        android:padding="10dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingTop="10dp"
-        android:background="@color/A5"
-        android:padding="10dp"
         android:text="@string/feedback_prompt"
         android:textColor="@color/color_important"
         android:textSize="14sp"
         />
+
     <EditText
         android:id="@+id/et_feedback"
         android:layout_width="match_parent"
         android:layout_height="136dp"
-        android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:hint="@string/feedback_hint"
-        android:textSize="16sp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/shape_edit_frame"
-        android:gravity="top"/>
+        android:gravity="top"
+        android:hint="@string/feedback_hint"
+        android:textSize="16sp"/>
+
     <TextView
         android:id="@+id/tv_feedback_commit"
         style="@style/btn_normal"
         android:layout_width="match_parent"
-        android:text="@string/submit"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="25dp"/>
+        android:layout_marginTop="25dp"
+        android:text="@string/submit"/>
 </LinearLayout>
